--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 *,
 *:before,
 *:after {
@@ -6,7 +7,12 @@
     box-sizing: border-box;
 }
 
+.no-scroll {
+    overflow-y: hidden;
+}
+
 body {
+    position: relative;
     font-family: "Work Sans", sans-serif;
     font-size: 16px;
     color: #A1A4AC;
@@ -32,6 +38,14 @@ body {
     z-index: 9999;
 
     transition: all 1s;
+}
+.header.fixed {
+    padding: 20px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #1E202A;
 }
 
 .header__inner{
@@ -60,10 +74,10 @@ body {
     position: relative;
 
     font-style: normal;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-    color: white;
+    color: #FFFFFF;
     text-decoration: none;
 }
 
@@ -75,7 +89,7 @@ body {
     bottom: -6px;
 
     height: 2px;
-    width: 0%;
+    width: 0;
     background: #fff;
 
     transition: all .3s;
@@ -118,7 +132,7 @@ body {
 }
 
 .menu__dropdown-item{
-    margin: 10px 20px;
+    margin: 10px 0;
 }
 .menu__dropdown-link{
     position: relative;
@@ -139,7 +153,7 @@ body {
     bottom: -6px;
 
     height: 2px;
-    width: 0%;
+    width: 0;
     background: #fff;
 
     transition: all .3s;
@@ -153,6 +167,8 @@ body {
     margin-left: 20px;
 }
 .header__button-link{
+    padding: 10px 30px;
+
     font-weight: 600;
     font-size: 13px;
     line-height: 15px;
@@ -163,7 +179,7 @@ body {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     border: 1px #14B45C solid;
-    padding: 10px 30px;
+
     transition: all .3s;
 }
 
