--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ body {
 /****************INTRO***************/
 
 .intro{
-    positin: relative;
+    position: relative;
 
     padding: 190px 0 140px;
 }
@@ -249,7 +249,7 @@ body {
 
     background: #14B45C;
     border: 1px solid #14B45C;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 
     transition: all .3s;
