--- a/css/style.css
+++ b/css/style.css
@@ -323,4 +323,128 @@ body {
     color: #A1A4AC;
 }
 
+/****************FEATURES***************/
+
+.features {
+    position: relative;
+    padding: 135px 0 185px;
+}
+
+.features__bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.features__bg-img {
+    width: 100%;
+    height: auto;
+}
+
+.features__row {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.features__item {
+    margin-top: 80px;
+    padding: 40px 60px 35px 40px;
+    max-width: 420px;
+
+    background: #FFFFFF;
+    border-radius: 15px;
+}
+
+.features__item:first-child {
+    margin-top: 84px;
+}
+
+.features__item-inner {
+    opacity: 0.6;
+    transition: all .3s;
+}
+
+.features__item-img {
+    width: 60px;
+    height: 60px;
+    background: rgba(161, 164, 172, 0.1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: all .3s;
+}
+
+.features__item-img svg {
+    transition: all .3s;
+}
+
+.features__item-title {
+    margin-bottom: 40px;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: #1C1F28;
+}
+
+.features__item-text {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+    color: #7A7C82;
+}
+
+.features__item:hover {
+    box-shadow: 0 10px 50px rgba(7, 42, 68, 0.04);
+    transition: all .3s;
+}
+
+.features__item:hover .features__item-inner {
+    opacity: 1;
+}
+
+.features__item:hover .features__item-img {
+    background: rgba(20, 180, 92, 0.1);
+}
+
+.features__item:hover .features__item-img svg {
+    fill: #14B45C;
+}
+
+.features__link {
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+.features__link-item {
+    padding: 16px 45px;
+
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 15px;
+    color: #FFFFFF;
+    text-decoration: none;
+
+    background: #14B45C;
+    border: 1px solid #14B45C;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+
+    transition: all .3s;
+}
+
+.features__link-item:hover {
+    color: #14B45C;
+    background: transparent;
+}
+
 
