--- a/css/style.css
+++ b/css/style.css
@@ -447,4 +447,87 @@ body {
     background: transparent;
 }
 
+/****************BUSINESS***************/
+
+.business {
+    position: relative;
+    padding: 270px 0 140px;
+}
+
+.business__oval {
+    position: absolute;
+}
+
+.business__oval--green {
+    top: -55px;
+    left: 0;
+}
+
+.business__oval--black {
+    bottom: -350px;
+    right: 0;
+}
+
+.business__title {
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 40px;
+    text-align: center;
+    color: #1C1F28;
+}
+
+.business__text {
+    margin-top: 20px;
+
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    color: #7A7C82;
+}
+
+.business__items {
+    margin-top: 80px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.business__item {
+    max-width: 420px;
+    text-align: center;
+}
+
+.business__item-img {
+    max-height: 160px;
+    display: flex;
+    align-items: center;
+
+    overflow: hidden;
+    border-radius: 15px 15px 0 0;
+}
+
+.business__item-img img {
+    width: 100%;
+}
+
+.business__item-title {
+    margin: 30px 0 10px;
+    padding: 0 60px;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: #1C1F28;
+}
+
+.business__item-text {
+    padding: 0 60px 30px;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+    color: #A1A4AC;
+}
+
+
+
 
