--- a/css/style.css
+++ b/css/style.css
@@ -555,3 +555,125 @@ body {
 
 
 
+/****************REVIEWS***************/
+
+.reviews {
+    padding: 140px 0 280px;
+}
+
+.reviews__title {
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 40px;
+    text-align: center;
+    color: #1C1F28;
+}
+
+.reviews__slider {
+    position: relative;
+    margin-top: 55px;
+}
+
+.reviews__slider .slick-slide {
+    display: flex;
+}
+
+.reviews__slider .slick-arrow {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+
+    background: #fff;
+    font-size: 0;
+    color: transparent;
+
+    border: none;
+    border-radius: 50%;
+
+    cursor: pointer;
+    box-shadow: 10px 20px 60px rgba(0, 0, 0, 0.06);
+    z-index: 999;
+    transition: all .3s;
+}
+
+.reviews__slider .slick-arrow:hover {
+    box-shadow: 10px 20px 60px rgba(0, 0, 0, 0.1);
+}
+
+.reviews__slider .slick-prev {
+    top: 50%;
+    left: -100px;
+    transform: translateY(-100%);
+
+    background: url(../images/arrow-prev.svg)no-repeat center;
+}
+
+.reviews__slider .slick-next {
+    top: 50%;
+    right: -100px;
+    transform: translateY(-100%);
+
+    background: url(../images/arrow-right.svg)no-repeat center;
+}
+
+.reviews__slide {
+    padding: 0 255px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.reviews__slide-text {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    color: #A1A4AC;
+}
+
+.reviews__slide-info {
+    margin-top: 40px;
+    display: flex;
+}
+
+.reviews__slide-col+.reviews__slide-col {
+    margin-left: 30px;
+}
+
+.reviews__slide-col {
+    display: flex;
+
+    justify-content: center;
+    flex-direction: column;
+}
+
+.reviews__slide-img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+}
+
+.reviews__slide-img img {
+    width: 100%;
+    height: 100%;
+}
+
+.reviews__slide-author {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #323643;
+}
+
+.reviews__slide-rating {
+    margin-top: 17px;
+    display: flex;
+}
+
+.reviews__slide-rating img {
+    margin-right: 9px;
+}
+
