--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
     bottom: -6px;
 
     height: 2px;
-    width: 0%;
+    width: 0;
     background: #fff;
 
     transition: all .3s;
@@ -159,7 +159,7 @@ body {
     bottom: -6px;
 
     height: 2px;
-    width: 0%;
+    width: 0;
     background: #fff;
 
     transition: all .3s;
@@ -185,7 +185,7 @@ body {
 
     background: #14B45C;
     border: 1px solid #14B45C;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 
     transition: all .3s;
