--- a/css/style.css
+++ b/css/style.css
@@ -900,3 +900,71 @@ body {
     transform: translateY(-10px);
 }
 
+
+
+
+/******************** Responsive ********************/
+@media(max-width: 1680px) {
+    .reviews__slider .slick-next {
+        right: 0;
+    }
+    .reviews__slider .slick-prev {
+        left: 0;
+    }
+}
+
+
+@media(max-width: 1366px) {
+    .header {
+        padding: 30px 0;
+    }
+
+    .intro {
+        padding: 140px 0 80px;
+    }
+
+    .intro__inner {
+        justify-content: center;
+    }
+
+    .intro__img {
+        max-width: 400px;
+    }
+
+    .intro__img img {
+        max-width: 100%;
+    }
+
+    .intro__content {
+        margin: 163px 0 0 50px;
+    }
+
+    .intro__content-title {
+        font-weight: 300;
+        font-size: 38px;
+        line-height: 44px;
+        color: #FFFFFF;
+    }
+
+    .reviews {
+        padding: 100px 0 240px;
+    }
+    .reviews__slider .slick-arrow {
+        width: 70px;
+        height: 70px;
+        background-size: 15px 25px;
+    }
+
+    .reviews__slide {
+        padding: 0 150px;
+    }
+
+    .footer__app {
+        padding: 50px 170px;
+        max-width: 800px;
+    }
+
+    .footer__nav {
+        justify-content: space-around;
+    }
+}
