--- a/css/style.css
+++ b/css/style.css
@@ -913,6 +913,31 @@ body {
 
 }
 
+@media(max-width: 1600px) {
+    .features__bg {
+        overflow: hidden;
+    }
+
+    .features__bg-img {
+        width: 100%;
+        height: 120%;
+        max-height: none;
+    }
+
+    .footer__app {
+        padding: 50px 300px;
+    }
+
+    .footer__bg {
+        top: 0;
+        overflow: hidden;
+    }
+
+    .footer__bg-img {
+        height: 100%;
+    }
+}
+
 
 @media(max-width: 1366px) {
     .header {
@@ -967,6 +992,35 @@ body {
 
     .footer__nav {
         justify-content: space-around;
+    }
+}
+
+
+@media(max-width: 1200px) {
+    .everneed {
+        padding: 30px 0 100px;
+    }
+
+    .features {
+        position: relative;
+        padding: 100px 0 125px;
+    }
+
+    .features__img {
+        max-width: 400px;
+    }
+
+    .features__img img {
+        max-width: 100%;
+    }
+
+    .features__item {
+        margin: 50px 0 0;
+        padding: 30px 45px 30px 30px;
+    }
+
+    .features__item:first-child {
+        margin-top: 50px;
     }
 }
 
@@ -1089,6 +1143,141 @@ body {
 
     .footer__copy {
         margin-top: 50px;
+    }
+}
+
+
+@media(max-width: 768px) {
+    .intro__bg {
+        overflow: hidden;
+    }
+
+    .intro__bg-img {
+        width: 250%;
+        height: 100%;
+    }
+
+    .intro__img {
+        display: none;
+    }
+
+    .intro__content {
+        margin: 0;
+    }
+
+    .everneed {
+        padding: 30px 0 50px;
+    }
+
+    .everneed__item-title {
+        margin: 20px 0 15px;
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .everneed__item-text {
+        font-size: 14px;
+        line-height: 17px;
+    }
+
+    .features {
+        position: relative;
+        padding: 50px 0 70px;
+    }
+
+    .features__bg-img {
+        height: 170%;
+    }
+
+    .features__col {
+        flex-direction: column;
+    }
+
+    .footer__bg-img {
+        width: 180%;
+    }
+
+    .footer__nav {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    .footer__nav-col {
+        width: 25%;
+        padding: 20px 20px;
+    }
+}
+
+
+@media(max-width: 445px) {
+    .intro__content-title {
+        font-size: 30px;
+        line-height: 35px;
+    }
+
+    .intro__content-links {
+        flex-direction: column;
+    }
+
+    .intro__content-links-watch {
+        margin: 15px 0 0;
+    }
+
+    .everneed__title,
+    .business__title,
+    .reviews__title {
+        font-size: 26px;
+        line-height: 30px;
+    }
+
+    .features__bg-img {
+        height: 188%;
+    }
+
+    .features__item {
+        padding: 20px 24px 20px 20px;
+    }
+
+    .features__item-title {
+        margin-bottom: 15px;
+    }
+
+    .business__link-item {
+        padding: 10px 30px;
+        font-size: 15px;
+    }
+
+    .business__item-title {
+        font-size: 20px;
+        line-height: 20px;
+    }
+
+    .business__item-text {
+        font-size: 16px;
+    }
+
+    .reviews__slider .slick-arrow {
+        width: 40px;
+        height: 40px;
+        background-size: 10px 17px;
+        box-shadow: 10px 20px 60px rgba(0, 0, 0, .3);
+    }
+
+    .reviews__slide {
+        padding: 0px 15px;
+    }
+
+    .reviews__slide-img {
+        width: 70px;
+        height: 70px;
+    }
+
+    .reviews__slide-author {
+        font-size: 16px;
+    }
+
+    .reviews__slide-rating {
+        margin-top: 10px;
     }
 }
 
