--- a/css/style.css
+++ b/css/style.css
@@ -903,15 +903,14 @@ body {
 
 
 /******************** Responsive ********************/
-
 @media(max-width: 1680px) {
     .reviews__slider .slick-next {
         right: 0;
     }
+
     .reviews__slider .slick-prev {
         left: 0;
     }
-
 }
 
 @media(max-width: 1600px) {
@@ -969,7 +968,6 @@ body {
         padding: 0 30px 30px;
     }
 }
-
 
 @media(max-width: 1366px) {
     .header {
@@ -1052,8 +1050,6 @@ body {
     }
 }
 
-
-
 @media(max-width: 1200px) {
     .everneed {
         padding: 30px 0 100px;
@@ -1094,7 +1090,6 @@ body {
     }
 
 }
-
 
 @media(max-width: 1000px) {
     .header__burger {
@@ -1217,6 +1212,30 @@ body {
     }
 }
 
+@media(max-width: 900px) {
+    .features__row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .features__col {
+        display: flex;
+    }
+
+    .features__item {
+        margin: 50px 15px 0;
+    }
+
+    .features__img {
+        max-width: 260px;
+    }
+
+    .features__bg-img {
+        width: 100%;
+        height: 150%;
+        max-height: none;
+    }
+}
 
 @media(max-width: 768px) {
     .intro__bg {
@@ -1280,6 +1299,9 @@ body {
 }
 
 @media(max-width: 600px) {
+    .everneed__items {
+        margin-top: 20px;
+    }
     .features__bg-img {
         height: 178%;
     }
@@ -1302,7 +1324,7 @@ body {
     }
 
     .reviews__slide {
-        padding: 0px 60px;
+        padding: 0 60px;
     }
 
     .reviews__slide-text {
@@ -1322,9 +1344,73 @@ body {
     .reviews__slide-rating {
         justify-content: center;
     }
+
+    .footer__app-title {
+        font-size: 18px;
+        line-height: 20px;
+    }
+
+    .footer__app-text {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .footer__app-link {
+        width: 100px;
+    }
+
+    .footer__app-link img {
+        max-width: 100%;
+    }
 }
 
+@media(max-width: 530px) {
+    .reviews {
+        padding: 100px 0 120px;
+    }
 
+    .footer {
+        padding: 0 0 30px;
+    }
+
+    .footer__app-text {
+        margin: 20px 0;
+    }
+
+    .footer__logo {
+        margin-top: 45px;
+    }
+
+    .footer__nav {
+        margin-top: 35px;
+    }
+
+    .footer__nav-col {
+        width: 50%;
+    }
+
+    .footer__copy {
+        margin-top: 40px;
+        flex-direction: column;
+    }
+
+    .footer__copy-text {
+        margin-top: 15px;
+        order: 2;
+        text-align: center;
+        line-height: 20px;
+    }
+
+    .footer__copy-socials {
+        order: 1;
+    }
+
+    .footer__app {
+        padding: 25px 20px;
+        margin: -40px auto 0;
+    }
+
+}
 
 @media(max-width: 445px) {
     .intro__content-title {
@@ -1361,14 +1447,12 @@ body {
 
     .business__link-item {
         padding: 10px 30px;
-
         font-size: 15px;
     }
 
     .business__item-title {
         font-size: 20px;
         line-height: 20px;
-
     }
 
     .business__item-text {
@@ -1379,13 +1463,11 @@ body {
         width: 40px;
         height: 40px;
         background-size: 10px 17px;
-
         box-shadow: 10px 20px 60px rgba(0, 0, 0, .3);
     }
 
     .reviews__slide {
         padding: 0 15px;
-
     }
 
     .reviews__slide-img {
@@ -1395,13 +1477,11 @@ body {
 
     .reviews__slide-author {
         font-size: 16px;
-
     }
 
     .reviews__slide-rating {
         margin-top: 10px;
     }
 }
-
 
 
